# osp.tools.ospi

./: CMakeLists.txt  INSTALL  INSTALL.md  README  README.md
cmake/modules/: FindGMP.cmake  FindLIBPODOFO.cmake
jsoncpp/: CMakeLists.txt
plans/python/: test.py
src/: CMakeLists.txt  PlanParams.cpp  PlanParams.h  PlanReader.cpp  PlanReader.h  ReaderJSONCPP.cpp  ReaderJSONCPP.h  ReaderPython.cpp  ReaderPython.h  ResourceCollection.cpp  ResourceCollection.h  SimplePlanReader.cpp  SimplePlanReader.h  SourcePage.cpp  SourcePage.h  Transform.cpp  Transform.h  curl.c  main.cpp
