SET(OSPI_READERS
	SimplePlanReader.cpp
)

SET(OSPI_SRCS
	main.cpp
	PlanParams.cpp
	PlanReader.cpp
	ResourceCollection.cpp
	SourcePage.cpp
	Transform.cpp
	${OSPI_READERS}
)

INCLUDE_DIRECTORIES(
${CMAKE_CURRENT_SOURCE_DIR}
${CMAKE_CURRENT_BINARY_DIR}
${LIBPODOFO_INCLUDE_DIR}
${Boost_INCLUDE_DIRS}
)

ADD_EXECUTABLE(ospi ${OSPI_SRCS})
TARGET_LINK_LIBRARIES(ospi
${LIBPODOFO_LIBRARY}
)
