SET(OSPI_READERS
	SimplePlanReader.cpp
	ReaderJSONCPP.cpp
)

SET(OSPI_SRCS
	main.cpp
	PlanParams.cpp
	PlanReader.cpp
	ResourceCollection.cpp
	SourcePage.cpp
	Transform.cpp
	${OSPI_READERS}
)

INCLUDE_DIRECTORIES(
${CMAKE_CURRENT_SOURCE_DIR}
${CMAKE_CURRENT_BINARY_DIR}
${LIBPODOFO_INCLUDE_DIR}
${Boost_INCLUDE_DIRS}
${JSON_INCLUDE_DIR}
)

ADD_EXECUTABLE(ospi ${OSPI_SRCS})
TARGET_LINK_LIBRARIES(ospi jsoncpp
${LIBPODOFO_LIBRARY}
)
