IF(PYTHONLIBS_FOUND)
	SET(PYREADER_SRC ReaderPython.cpp)
ENDIF(PYTHONLIBS_FOUND)

SET(OSPI_READERS
	SimplePlanReader.cpp
	ReaderJSONCPP.cpp
	${PYREADER_SRC}
)

IF(CURL_FOUND)
	SET(CURL_SRC curl.c)
ENDIF(CURL_FOUND)

SET(OSPI_SRCS
	main.cpp
	PlanParams.cpp
	PlanReader.cpp
	ResourceCollection.cpp
	SourcePage.cpp
	Transform.cpp
	${OSPI_READERS}
	${CURL_SRC}
)

INCLUDE_DIRECTORIES(
${CMAKE_CURRENT_SOURCE_DIR}
${CMAKE_CURRENT_BINARY_DIR}
${LIBPODOFO_INCLUDE_DIR}
${Boost_INCLUDE_DIRS}
${JSON_INCLUDE_DIR}
${EXTRA_INC}
)

ADD_EXECUTABLE(ospi ${OSPI_SRCS})

TARGET_LINK_LIBRARIES(ospi jsoncpp
${LIBPODOFO_LIBRARY}
${Boost_LIBRARIES}
${EXTRA_LIB}
)

INSTALL(TARGETS ospi RUNTIME DESTINATION bin)

